[package]
name = "roitelet"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
show-image = "0.13.1"
image = "0.24.7"
rustfft = "6.1.0"
clap = { version = "4.4.14", features = ["derive"] }
rayon = "1.8.0"

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 3